# BM25-Turbo-Rust-Python-WASM-CLI

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: bench.yml  ci.yml  cla.yml  dco.yml  publish-pypi.yml
benchmarks/: Cargo.toml
benchmarks/benches/: beir.rs  indexing.rs  query.rs  scoring.rs
benchmarks/src/: dataset.rs  eval.rs  lib.rs  results.rs
benchmarks/tests/: correctness.rs  test_dataset.rs  test_eval.rs
benchmarks/tests/fixtures/: corpus.jsonl  qrels.tsv  queries.jsonl
bm25-turbo-cli/: Cargo.toml
bm25-turbo-cli/src/: main.rs  output.rs
bm25-turbo-cli/src/commands/: bench.rs  index.rs  mcp.rs  mod.rs  pull.rs  push.rs  search.rs  serve.rs
bm25-turbo-cli/tests/: cli_integration.rs
bm25-turbo-python/: Cargo.toml  README.md  pyproject.toml
bm25-turbo-python/src/: lib.rs
bm25-turbo-wasm/: Cargo.toml  README.md  build.sh  package.json
bm25-turbo-wasm/src/: lib.rs
bm25_turbo/: Cargo.toml  build.rs
bm25_turbo/proto/: bm25.proto
bm25_turbo/src/: csc.rs  distributed.rs  error.rs  huggingface.rs  index.rs  lib.rs  mcp.rs  persistence.rs  query_cache.rs  scoring.rs  selection.rs  server.rs  simd.rs  stopwords.rs  streaming.rs  tokenizer.rs  types.rs  wal.rs  wand.rs  wasm.rs
bm25_turbo/tests/: integration.rs
examples/: README.md
examples/basic_search/: Cargo.toml  main.rs
examples/http_server/: Cargo.toml  main.rs
examples/persistence/: Cargo.toml  main.rs
examples/python_usage/: README.md  example.py
examples/streaming_index/: Cargo.toml  main.rs
