[package]
name = "bm25-turbo-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
bm25_turbo = { path = "../bm25_turbo", features = ["parallel", "persistence", "simd", "server", "ann"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
zip = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
csv = "1.3"
tempfile = "3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
divan = "0.1"
proptest = "1"
rand = "0.8"
rand_chacha = "0.3"

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "scoring"
harness = false

[[bench]]
name = "beir"
harness = false

[[bin]]
name = "beir_bench"
path = "src/bin/beir_bench.rs"
