[package]
name = "http-server-example"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "http-server-example"
path = "main.rs"

[dependencies]
bm25_turbo = { path = "../../bm25_turbo", features = ["server"], default-features = false }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
